fix overflow on mobile

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -5,8 +5,8 @@
     width: 100%;
     height:50vh;
     object-fit: scale-down;
-    position: relative;
-    right: 25%;
+    position: absolute;
+    top: 0px;  
 }
 
 .LogoBack{
@@ -15,11 +15,22 @@
     width: 100%;
     height:50vh;
     object-fit: scale-down;
-    position: relative;
+    position: absolute;
     filter: blur(200px);
     opacity: 40%;
+    top: 0px;
+    z-index: -1;
+    
     /* center */
-    left: 25%;
+    
+}
+
+.logo-container{
+    width: 100%;
+    overflow-x: hidden;
+    position: relative;
+    height: 50vh;
+    display: block;
 }
 
 
